minor padding adjustment

--- a/sites/all/themes/cooperhewitt/css/template.css
+++ b/sites/all/themes/cooperhewitt/css/template.css
@@ -99,7 +99,7 @@ a.small:hover .button {background-position: 0 -39px;background-repeat: no-repeat
 
 /* Main Layout */
 #main-trans {padding: 0 10px 10px 10px;}
-#main-trans-top {padding: 0 10px;}
+#main-trans-top {padding: 10px 10px;}
 .colmask {clear:both;overflow:hidden;position:relative;width:100%;}
 .col1wrap {padding-bottom:2em;}
 #maincol {position: relative;padding: 0;}
