--- a/sites/all/themes/cooperhewitt/css/template.css
+++ b/sites/all/themes/cooperhewitt/css/template.css
@@ -544,8 +544,8 @@ img.demo {padding: 3px;border: 3px solid #e9e9e9;}
 .style4 .image-full img[src$="bigblank.png"] {background: url(../images/feature/4.jpg) no-repeat;}
 .style5 .image-full img[src$="bigblank.png"] {background: url(../images/feature/5.jpg) no-repeat;}
 .style6 .image-full img[src$="bigblank.png"] {background: url(../images/feature/6.jpg) no-repeat;}
-.iridium-home #showmodules2 div.first {width: 65.5%;}
-.iridium-home #showmodules2 div.last {width: 33%;}
+.iridium-home #showmodules2 div.first {width: 315px; padding-right:8px;}
+.iridium-home #showmodules2 div.last {width: 315px; padding-left:8px;}
 .abstract-menu {margin: 0;padding: 0 0 1px 0;}
 .abstract-menu li {list-style: none;padding-left:5px;}
 .abstract-menu li a {font-size: 25px;line-height:35px;font-weight: bold;padding: 5px 5px 5px 8px;}
