--- a/sites/all/themes/cooperhewitt/css/template.css
+++ b/sites/all/themes/cooperhewitt/css/template.css
@@ -73,7 +73,7 @@ a:hover {text-decoration: underline;}
 #top-right-surround {width: 55%;float: right;}
 #top-right {float: right;height: 14px;}
 #top-right .moduletable {padding: 0;font-size: 12px;}
-#top-right ul {margin: 0;padding: 0;}
+#top-right ul {margin: 0;padding: 0 0 0 10px;}
 #top-right ul li {margin: 0 0 0 20px;padding: 0;list-style: none;float: right;font-weight: bold;line-height: 100%;}
 #top-right ul li a:hover {text-decoration: none;}
 #accessibility {height: 14px;float: right;margin-left: 25px;}
@@ -204,7 +204,7 @@ body.simple .rokstories-layout4 .feature-block .feature-numbers {background-posi
 .hilite1 .roktabs-wrapper .arrow-prev:hover {background-position: 0 -46px;background-repeat: no-repeat;}
 
 /* RokAjaxSearch */
-#searchmod {width: 223px;float: right;margin: 30px -175px;}
+#searchmod {width: 223px;float: right;margin: 10px 0 0;}
 #searchmod .moduletable {padding: 0;}
 #searchmod h3 {font-size: 14px;margin: 0 0 10px 5px;padding: 0;}
 #searchmod-surround {height: 22px;background-position: 0 0;background-repeat: no-repeat;}
