--- a/sites/default/themes/setinstyle/css/general.css
+++ b/sites/default/themes/setinstyle/css/general.css
@@ -236,7 +236,7 @@ hr.dotted {
 	display: none;
 }
 
-body.iridium-home #maincontent-block {
+body.setinstyle-home #maincontent-block {
 	padding: 0;
 }
 
