--- a/sites/all/modules/simplemenu/themes/simpleblack/simpleblack.css
+++ b/sites/all/modules/simplemenu/themes/simpleblack/simpleblack.css
@@ -2,21 +2,21 @@
 
 .simplemenu-left {
 background: #101010 url(bkg.png) repeat-x bottom left ;
-padding:5px 5px 5px 20px;
+padding:5px 5px 5px 10px;
 height: 35px;
-border-bottom: 1px solid #999;
+/*border-bottom: 1px solid #999; */
 }
 
 .simplemenu-right {
 background: #101010 url(bkg.png) repeat-x bottom left ;
 padding:0px 5px 0px 0px;
-height: 35px;
-border-bottom: 1px solid #999;
+/*height: 35px; */
+/* border-bottom: 1px solid #999; */
 text-align: left;
 }
 
 .simplemenu-block {
-  height: 35px;
+  /* height: 35px; */
   _margin-bottom: -20px;
 }
 #simplemenu {
