--- a/sites/default/themes/setinstyle/css/template.css
+++ b/sites/default/themes/setinstyle/css/template.css
@@ -43,7 +43,7 @@ p {margin-top: 10px;margin-bottom: 15px;}
 h1, h2, h3, h4, h5 {padding-bottom: 5px;margin: 25px 0 10px 0;font-weight: normal;line-height: 135%;}
 h1 {font-size: 250%;}
 h2 {font-size: 200%;}
-h3 {font-size: 175%;}
+/* h3 {font-size: 175%;} */
 h4 {font-size: 120%;line-height: 130%;}
 h5 {font-size: 120%;text-transform: uppercase;}
 a {text-decoration: none;outline: none;}
