cleaning up theme

--- a/sites/all/themes/cooperhewitt/css/general.css
+++ b/sites/all/themes/cooperhewitt/css/general.css
@@ -236,7 +236,7 @@ hr.dotted {
 	display: none;
 }
 
-body.iridium-home #maincontent-block {
+body.cooperhewitt-home #maincontent-block {
 	padding: 0;
 }
 
