--- a/sites/all/themes/cooperhewitt/css/template.css
+++ b/sites/all/themes/cooperhewitt/css/template.css
@@ -16,8 +16,8 @@
 @font-face {font-family: "Continuum";src:local("Continuum"), url(../fonts/Continuum-Bold.ttf) format("truetype");font-weight:bold;}
 
 /* Font Family Settings */
-#ff-iridium, a.iridium, #ff-iridium #horiz-menu li li span, #ff-iridium input.button {font-family: 'Cantarell';}
-#ff-iridium #horiz-menu li span, #ff-iridium .date-block, #ff-iridium h1, #ff-iridium h2, #ff-iridium h3, #ff-iridium h4, #ff-iridium h5, #ff-iridium .roktabs-links, #ff-iridium .feature-block span.feature-title {font-family: 'Cantarell';}
+#ff-cooperhewitt, a.cooperhewitt, #ff-cooperhewitt #horiz-menu li li span, #ff-cooperhewitt input.button {font-family: 'Cantarell';}
+#ff-cooperhewitt #horiz-menu li span, #ff-cooperhewitt .date-block, #ff-cooperhewitt h1, #ff-cooperhewitt h2, #ff-cooperhewitt h3, #ff-cooperhewitt h4, #ff-cooperhewitt h5, #ff-cooperhewitt .roktabs-links, #ff-cooperhewitt .feature-block span.feature-title {font-family: 'Cantarell';}
 #ff-bebas, a.bebas, #ff-bebas #horiz-menu li li span, #ff-bebas h3.showtext, #ff-bebas input.button  {font-family: Helvetica,Arial,sans-serif;}
 #ff-bebas .date-block, #ff-bebas h1, #ff-bebas h2, #ff-bebas h3, #ff-bebas h4, #ff-bebas h5, #ff-bebas .feature-block span.feature-title {font-family: Bebas,Helvetica,Arial,sans-serif;}
 #ff-continuum, a.continuum, #ff-continuum #horiz-menu li li span, #ff-continuum h3.showtext, #ff-continuum input.button  {font-family: Helvetica,Arial,sans-serif;}
@@ -544,10 +544,10 @@ img.demo {padding: 3px;border: 3px solid #e9e9e9;}
 .style4 .image-full img[src$="bigblank.png"] {background: url(../images/feature/4.jpg) no-repeat;}
 .style5 .image-full img[src$="bigblank.png"] {background: url(../images/feature/5.jpg) no-repeat;}
 .style6 .image-full img[src$="bigblank.png"] {background: url(../images/feature/6.jpg) no-repeat;}
-.iridium-home #showmodules2 div.first {width: 315px; padding-right:8px;}
-.iridium-home #showmodules2 div.last {width: 315px; padding-left:8px;}
-.iridium-home #showmodules div.first {width: 630px; padding-right:8px; padding-bottom:6px;}
-.iridium-home #showmodules div.last {width: 315px; padding-left:8px; padding-bottom:6px;}
+.cooperhewitt-home #showmodules2 div.first {width: 315px; padding-right:8px;}
+.cooperhewitt-home #showmodules2 div.last {width: 315px; padding-left:8px;}
+.cooperhewitt-home #showmodules div.first {width: 630px; padding-right:8px; padding-bottom:6px;}
+.cooperhewitt-home #showmodules div.last {width: 315px; padding-left:8px; padding-bottom:6px;}
 .abstract-menu {margin: 0;padding: 0 0 1px 0;}
 .abstract-menu li {list-style: none;padding-left:5px;}
 .abstract-menu li a {font-size: 25px;line-height:35px;font-weight: bold;padding: 5px 5px 5px 8px;}
