cleanup css and info

--- a/sites/all/themes/cooperhewitt/css/style2.css
+++ b/sites/all/themes/cooperhewitt/css/style2.css
@@ -142,7 +142,7 @@ form.poll .readon-wrap1 a {color: #333;}
 #main-body ul.menu li a, #main-body ul.menu li a:link, #main-body ul.menu li a:visited
 {
     font-weight:bold;
-    font-family: verdana, arial, san-serif;
+    font-family: vera-sans-1, vera-sans-2;
     font-size: 11px;
     color: #698DA5;
     text-decoration: none;
