--- a/sites/all/themes/cooperhewitt/css/template.css
+++ b/sites/all/themes/cooperhewitt/css/template.css
@@ -150,7 +150,7 @@ h3.module-title span, .contentheading span {padding: 0 8px 0 18px;margin-left: -
 #showmodules, #showmodules2, #featuremodules, #mainmodules, #mainmodules2, #mainmodules3, #mainmodules4, #mainmodules5, #mainmodules6, #mainmodules7 {overflow: hidden;}
 #mainmodules2 {padding-top: 15px;}
 #mainmodules3 {padding: 5px 10px;}
-#mainmodules4 {padding-top: 20px;}
+#mainmodules4 {padding: 5px;}
 #mainmodules5, #mainmodules6 {margin: 0 -10px;}
 
 /* Module Variations */
@@ -449,7 +449,11 @@ form.josForm label.hasTip {display: block;float: left;height: 25px;line-height: 
 #footer {position: relative;overflow: hidden;}
 body.full #footer-bg2, body.medium #footer-bg2 {position: relative;z-index: 1;padding-bottom: 90px;}
 /*.footer-mod {padding: 15px 0;} */
-#footer a {font-weight: bold;}
+#footer a {color: #1f1f1f;}
+li.leaf {
+    margin: 0;
+    padding: 0.2em 0.5em 0 0;
+}
 #mainmodules3 a {font-weight: bold;}
 #bottom .moduletable {padding: 15px;}
 
