--- a/sites/all/themes/cooperhewitt/css/template.css
+++ b/sites/all/themes/cooperhewitt/css/template.css
@@ -74,7 +74,7 @@ a:hover {text-decoration: underline;}
 #top-right {float: right;height: 14px;}
 #top-right .moduletable {padding: 0;font-size: 12px;}
 #top-right ul {margin: 0;padding: 0 0 0 10px;}
-#top-right ul li {margin: 0 0 0 20px;padding: 0;list-style: none;float: right;font-weight: bold;line-height: 100%;}
+#top-right ul li {margin: 0 0 0 20px;padding: 0;list-style: none;float: right;line-height: 100%;}
 #top-right ul li a:hover {text-decoration: none;}
 #accessibility {height: 14px;float: right;margin-left: 25px;}
 .textsizer-desc {display: block;float: left;text-align: left;margin-right: 8px;font-weight: bold;line-height: 100%;font-size: 12px;}
